Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# domgross is the outcome variable"
+    "from sklearn"
    ]
   },
   {
