Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
