Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -314,7 +314,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pd_df.drop(\"\")"
+    "X = pd_df.drop('domgross', axis=1)\n",
+    "y = pd"
    ]
   },
   {
