--- a/index.ipynb
+++ b/index.ipynb
@@ -310,12 +310,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = pd_df.drop('domgross', axis=1)\n",
-    "y = pd"
+    "y = pd_df['domgross']"
    ]
   },
   {
@@ -324,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split()"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, )"
    ]
   },
   {
