--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, )"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, size=0.2, )"
    ]
   },
   {
