--- a/index.ipynb
+++ b/index.ipynb
@@ -320,20 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, size=0.2, )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Your code here"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
   },
   {
