Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code "
+    "from sklearn.linear_model import LinearRegression\n"
    ]
   },
   {
