Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -336,11 +336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n"
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -348,7 +348,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lr = LinearRegression().fit()"
+   ]
   },
   {
    "cell_type": "markdown",
