Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LinearRegression().fit()"
+    "lr = LinearRegression().fit(X_train, y_train)\n",
+    "lr.coef"
    ]
   },
   {
