Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -345,12 +345,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.35647625, -0.26708726,  0.17649593,  0.27863123])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lr = LinearRegression().fit(X_train, y_train)\n",
-    "lr.coef"
+    "lr.coef_"
    ]
   },
   {
@@ -377,7 +388,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "# your code here"
+    "\n"
    ]
   },
   {
