--- a/index.ipynb
+++ b/index.ipynb
@@ -389,7 +389,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "y_ha"
+    "y_hat = lr.predict(X_train)"
    ]
   },
   {
