--- a/index.ipynb
+++ b/index.ipynb
@@ -389,7 +389,9 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "y_hat = lr.predict(X_train)"
+    "y_hat_train = lr.predict(X_train)\n",
+    "\n",
+    "plt.scatter(y_)"
    ]
   },
   {
