--- a/index.ipynb
+++ b/index.ipynb
@@ -391,7 +391,7 @@
     "\n",
     "y_hat_train = lr.predict(X_train)\n",
     "\n",
-    "plt.scatter(y_)"
+    "plt.scatter(y_train, y_hat_train)"
    ]
   },
   {
