--- a/index.ipynb
+++ b/index.ipynb
@@ -391,7 +391,8 @@
     "\n",
     "y_hat_train = lr.predict(X_train)\n",
     "\n",
-    "plt.scatter(y_train, y_hat_train)"
+    "plt.scatter(y_train, y_hat_train)\n",
+    "plt.xlabel()"
    ]
   },
   {
