--- a/index.ipynb
+++ b/index.ipynb
@@ -392,7 +392,8 @@
     "y_hat_train = lr.predict(X_train)\n",
     "\n",
     "plt.scatter(y_train, y_hat_train)\n",
-    "plt.xlabel()"
+    "plt.xlabel('actual domgross')\n",
+    "plt.ylabe"
    ]
   },
   {
