Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -393,7 +393,8 @@
     "\n",
     "plt.scatter(y_train, y_hat_train)\n",
     "plt.xlabel('actual domgross')\n",
-    "plt.ylabe"
+    "plt.ylabel('predicted domgross')\n",
+    "plt."
    ]
   },
   {
