--- a/index.ipynb
+++ b/index.ipynb
@@ -431,7 +431,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "y_hat_test = lr.predict(X_train)\n",
+    "\n",
+    "plt.scatter(y_train, y_hat_train)\n",
+    "plt.plot(y_train, y_train, label='Actual Data')\n",
+    "plt.xlabel('actual domgross')\n",
+    "plt.ylabel('predicted domgross')\n",
+    "plt.show();"
    ]
   },
   {
