--- a/index.ipynb
+++ b/index.ipynb
@@ -464,13 +464,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "def bias(y, y_hat):\n",
-    "    pass"
+    "    "
    ]
   },
   {
