--- a/index.ipynb
+++ b/index.ipynb
@@ -473,12 +473,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bias(y, y_hat):\n",
-    "    np.mean()"
+    "    return np.mean(y_hat - y)"
    ]
   },
   {
@@ -496,7 +496,7 @@
    "outputs": [],
    "source": [
     "def variance(y_hat):\n",
-    "    pass"
+    "    pa"
    ]
   },
   {
