--- a/index.ipynb
+++ b/index.ipynb
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code for train set bias and variance"
+    "bias()"
    ]
   },
   {
