--- a/index.ipynb
+++ b/index.ipynb
@@ -508,11 +508,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-8.705157806719977e-17"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bias()"
+    "bias(y_train, y_hat_train), b"
    ]
   },
   {
