--- a/index.ipynb
+++ b/index.ipynb
@@ -508,22 +508,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-8.705157806719977e-17"
+       "(-8.705157806719977e-17, 0.012395514527135033)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bias(y_train, y_hat_train), b"
+    "bias(y_train, y_hat_train), variance(y_hat_train)"
    ]
   },
   {
