Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -528,11 +528,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.026050047651449033, 0.022296253340438457)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# code for test set bias and variance"
+    "bias(y_test, y_hat_test), variance(y_hat_test)"
    ]
   },
   {
