Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your description here (this cell is formatted using markdown)"
+    "Our training "
    ]
   },
   {
