--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our training "
+    "Our training data has very low (nearly "
    ]
   },
   {
