Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our training data has very low (nearly "
+    "Our training data has very low (nearly zero bias) and little variance. So"
    ]
   },
   {
