--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our training data has very low (nearly zero bias) and little variance. So"
+    "Our training data has very low (nearly zero bias) and little variance. So the training data does not seem to "
    ]
   },
   {
