Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our training data has very low (nearly zero bias) and little variance. So the training data does not seem to "
+    "Our training data has very low (nearly zero bias) and little variance. So the training data does not seem to be under or over fit.\n",
+    "\n",
+    "The test data has a "
    ]
   },
   {
