--- a/index.ipynb
+++ b/index.ipynb
@@ -559,7 +559,7 @@
    "source": [
     "Our training data has very low (nearly zero bias) and little variance. So the training data does not seem to be under or over fit.\n",
     "\n",
-    "The test data has a bit higher bias and variance but it it not too bad so I do not t"
+    "The test data has a bit higher bias and variance but it it not too bad so I do not think it is under or over fit."
    ]
   },
   {
