--- a/index.ipynb
+++ b/index.ipynb
@@ -588,8 +588,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import PolynomialFeatures\\\n",
-    "# your code here"
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n"
    ]
   },
   {
