Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -589,7 +589,8 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import PolynomialFeatures\n",
-    "\n"
+    "\n",
+    "poly = PolynomialFeatures()"
    ]
   },
   {
