Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -590,7 +590,8 @@
    "source": [
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
-    "poly = PolynomialFeatures()"
+    "poly = PolynomialFeatures(3)\n",
+    "X"
    ]
   },
   {
