--- a/index.ipynb
+++ b/index.ipynb
@@ -591,7 +591,7 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
     "poly = PolynomialFeatures(3)\n",
-    "X"
+    "X_poly = poly.fit_transform(X)"
    ]
   },
   {
