Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -591,7 +591,9 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
     "poly = PolynomialFeatures(3)\n",
-    "X_poly = poly.fit_transform(X)"
+    "X_poly = poly.fit_transform(X)\n",
+    "\n",
+    "np.shape(X_poly)"
    ]
   },
   {
