Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -612,7 +612,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reg_pol"
+   ]
   },
   {
    "cell_type": "markdown",
