Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -613,7 +613,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg_pol"
+    "reg_poly = LinearRegression().fit(X_poly, )"
    ]
   },
   {
