Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -613,7 +613,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg_poly = LinearRegression().fit(X_poly, )"
+    "reg_poly = LinearRegression().fit(X_poly, y)\n",
+    "poly_y_hat = reg_pol"
    ]
   },
   {
