Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -609,12 +609,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "reg_poly = LinearRegression().fit(X_poly, y)\n",
-    "poly_y_hat = reg_pol"
+    "poly_y_hat = reg_poly.predict(X_poly)"
    ]
   },
   {
