Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -630,7 +630,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "plt.scatter(y_test, y_hat_test)\n",
+    "plt.plot(y, y_test, label='Actual Data')\n",
+    "plt.xlabel('actual domgross')\n",
+    "plt.ylabel('predicted domgross')\n",
+    "plt.show();"
    ]
   },
   {
