Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -630,8 +630,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(y_test, y_hat_test)\n",
-    "plt.plot(y, y_test, label='Actual Data')\n",
+    "plt.scatter(y, poly_y_hat)\n",
+    "plt.plot(y, y, label='Actual Data')\n",
     "plt.xlabel('actual domgross')\n",
     "plt.ylabel('predicted domgross')\n",
     "plt.show();"
