Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -670,7 +670,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bias()"
+    "bias(y, poly_y_hat), variance(poly_)"
    ]
   },
   {
