Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -666,11 +666,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-4.680515234648889e-15, 0.05684117965124519)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bias(y, poly_y_hat), variance(poly_)"
+    "bias(y, poly_y_hat), variance(poly_y_hat)"
    ]
   },
   {
