--- a/index.ipynb
+++ b/index.ipynb
@@ -609,11 +609,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = ta"
+    "X_train, X_test, y_train, y_test = train_test_split(X_poly, y)"
    ]
   },
   {
@@ -622,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg_poly = LinearRegression().fit(X_poly, y)\n",
+    "reg_poly = LinearRegression().fit(X_pol, y)\n",
     "poly_y_hat = reg_poly.predict(X_poly)"
    ]
   },
