Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -622,8 +622,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg_poly = LinearRegression().fit(X_pol, y)\n",
-    "poly_y_hat = reg_poly.predict(X_poly)"
+    "reg_poly = LinearRegression().fit(X_train, y_train)\n",
+    " = reg_poly.predict(X_poly)"
    ]
   },
   {
