Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -618,12 +618,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "reg_poly = LinearRegression().fit(X_train, y_train)\n",
-    " = reg_poly.predict(X_poly)"
+    "y_train_hat = reg_poly.predict(X_poly)"
    ]
   },
   {
@@ -652,7 +652,7 @@
     }
    ],
    "source": [
-    "plt.scatter(y, poly_y_hat)\n",
+    "plt.scatter(y_train, poly_y_hat)\n",
     "plt.plot(y, y, label='Actual Data')\n",
     "plt.xlabel('actual domgross')\n",
     "plt.ylabel('predicted domgross')\n",
