Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -652,8 +652,8 @@
     }
    ],
    "source": [
-    "plt.scatter(y_train, poly_y_hat)\n",
-    "plt.plot(y, y, label='Actual Data')\n",
+    "plt.scatter(y_train, y_train_hat)\n",
+    "plt.plot(y_, y, label='Actual Data')\n",
     "plt.xlabel('actual domgross')\n",
     "plt.ylabel('predicted domgross')\n",
     "plt.show();"
