Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -690,7 +690,7 @@
     }
    ],
    "source": [
-    "bias(y, poly_y_hat), variance(poly_y_hat)"
+    "bias(y_train, y_train_hat), variance()"
    ]
   },
   {
