--- a/index.ipynb
+++ b/index.ipynb
@@ -675,22 +675,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-4.680515234648889e-15, 0.05684117965124519)"
+       "(-3.843201009959526e-15, 0.07252893131714286)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bias(y_train, y_train_hat), variance()"
+    "bias(y_train, y_train_hat), variance(y_train_hat)"
    ]
   },
   {
