Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -706,7 +706,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "plt.scatter(y_test, y_test_hat)\n",
+    "plt.plot(y_test, y_train, label='Actual Data')\n",
+    "plt.xlabel('actual domgross')\n",
+    "plt.ylabel('predicted domgross')\n",
+    "plt.show();"
    ]
   },
   {
