Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -706,8 +706,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "y_test_hat = reg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.scatter(y_test, y_test_hat)\n",
-    "plt.plot(y_test, y_train, label='Actual Data')\n",
+    "plt.plot(y_test, y_test, label='Actual Data')\n",
     "plt.xlabel('actual domgross')\n",
     "plt.ylabel('predicted domgross')\n",
     "plt.show();"
