--- a/index.ipynb
+++ b/index.ipynb
@@ -702,11 +702,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_test_hat = reg"
+    "y_test_hat = reg_poly.predict(X_test)"
    ]
   },
   {
