Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -744,11 +744,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.005074781413998364, 0.5345765647158609)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bias(y_train, y_train_hat), variance(y_train_hat)"
+    "bias(y_test, y_test_hat), variance(y_test_hat)"
    ]
   },
   {
